spacing fixed and animation fixed

--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,6 @@ img {
   font-family: 'Archivo Black', sans-serif;
   font-weight: 800;
 }
-.space-content {
-  margin-top: 100px;
-}
 /** Hero Styling **/
 .hero {
   background: rgb(6, 5, 5);
